# baselinker-rs

./: .gitignore  Cargo.toml  README.md
examples/: getcourierslist.rs  ordersexample.rs
src/: baselinker.rs  common.rs  lib.rs  requests.rs  serialization.rs
src/requests/courier_shipments/: create_package.rs  create_package_manual.rs  delete_courier_package.rs  get_courier_accounts.rs  get_courier_fields.rs  get_courier_packages_status_history.rs  get_courier_services.rs  get_couriers_list.rs  get_label.rs  get_order_packages.rs  get_protocol.rs  get_request_parcel_pickup_fields.rs  request_parcel_pickup.rs
src/requests/external_storages/: get_external_storage_categories.rs  get_external_storage_products_data.rs  get_external_storage_products_list.rs  get_external_storage_products_prices.rs  get_external_storage_products_quantity.rs  get_external_storages_list.rs  update_external_storage_products_quantity.rs
src/requests/orders/: add_invoice.rs  add_order.rs  add_order_invoice_file.rs  add_order_product.rs  delete_order_product.rs  get_invoices.rs  get_journal_list.rs  get_new_receipts.rs  get_order_extra_fields.rs  get_order_payments_history.rs  get_order_sources.rs  get_order_status_list.rs  get_order_transaction_details.rs  get_orders.rs  get_orders_by_email.rs  get_orders_by_phone.rs  get_receipt.rs  get_series.rs  set_order_fields.rs  set_order_payment.rs  set_order_product_fields.rs  set_order_receipt.rs  set_order_status.rs
src/requests/product_catalog/: add_inventory.rs  add_inventory_category.rs  add_inventory_manufacturer.rs  add_inventory_price_group.rs  add_inventory_product.rs  add_inventory_warehouse.rs  delete_inventory.rs  delete_inventory_category.rs  delete_inventory_manufacturer.rs  delete_inventory_price_group.rs  delete_inventory_product.rs  delete_inventory_warehouse.rs  get_inventories.rs  (+14 more)
