[package]
name = "baselinker"
version = "0.1.1"
edition = "2018"
description = "BaseLinker.com API client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bugproof/baselinker-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros"] }